# cold-agent-sdk

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: agent.rs  budget.rs  callback.rs  config.rs  delegate.rs  dispatch_parallel.rs  error.rs  hooks.rs  lib.rs  memory.rs  prompt.rs  result.rs  session.rs  skill.rs  state.rs  streaming_executor.rs  subagent.rs
tests/: integration_tests.rs
