[package]
name = "cold-agent-sdk"
version = "0.1.0"
edition = "2024"
description = "LAMCLOD agent orchestration SDK"
license = "MIT"
rust-version = "1.85"
readme = "README.md"
repository = "https://github.com/LamClod/cold-agent-sdk"
keywords = ["llm", "agent", "sdk", "ai", "tool-use"]
categories = ["development-tools", "asynchronous"]

[dependencies]
cold-sdk = { path = "../cold-sdk" }
cold-context = { path = "../cold-context" }
cold-tools = { path = "../cold-tools" }
tokio = { version = "1", features = ["fs", "time", "sync", "rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tracing = { version = "0.1", optional = true }

[features]
default = []
tracing = ["dep:tracing", "cold-sdk/tracing", "cold-context/tracing"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
